--- a/index.html
+++ b/index.html
@@ -1,57 +1,485 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Happy Birthday 🎉</title>
-<link rel="stylesheet" href="stylesh.css">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Complete Responsive Event Organizer Website Design Tutorial</title>
+
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+    <link rel="stylesheet" href="style.css">
+
+
+
 </head>
 <body>
 
-<!-- PAGE 1 -->
-<div class="page" id="page1">
-  <h1 class="title">Happy Birthday My Dear Wife 🎂</h1>
-  <p class="subtitle">Click each photo to reveal a message 💝</p><div class="gallery">
-  
-     <div class="photo-card" data-message="Thanks for coming into my life 💖">
-    <img src="sh-1.jpeg" alt="Photo 1">
-    <div class="message-box"><p></p></div>
-  </div>
 
-  <div class="photo-card" data-message="Let’s celebrate all your birthdays together forever 🎈">
-    <img src="sh-2.jpeg" alt="Photo 2">
-    <div class="message-box"><p></p></div>
-  </div>
+<header class="header">
+    <a href="#" class="logo"><span>e</span>vento</a>
 
-  <div class="photo-card" data-message="I’ll be with you till my last breath 💞">
-    <img src="sh-3.jpeg" alt="Photo 3">
-    <div class="message-box"><p></p></div>
-  </div>
-</div>
+    <nav class="navbar">
+        <a href="#home">home</a>
+        <a href="#service">service</a>
+        <a href="#about">about</a>
+        <a href="#gallery">gallery</a>
+        <a href="#price">price</a>
+        <a href="#review">review</a>
+        <a href="#contact">contact</a>
+    </nav>
 
+    <div id="menu-bars" class="fas fa-bars"></div>
+</header>
 
-  <canvas id="heartsCanvas"></canvas>
-  <button class="btn" id="goNext">Next Surprise 🎁</button>
-</div>
-
-<!-- PAGE 2 -->
-<div class="page hidden" id="page2">
-  <canvas id="floatingHeartsCanvas"></canvas>
-
-  <div class="card" id="card">
-    <h1 class="bday-title">Happy Birthday 🎉</h1>
-    <p class="bday-sub">You bring endless joy and love into my life ❤️</p>
-
-    <!-- Floating PS letters -->
-    <div class="floating-letters"></div>
-
-    <div class="controls">
-      <button class="btn" id="party">Celebrate Again 🎊</button>
+<section class="home" id="home">
+    <div class="content">
+        <h3>its time to celebrate! the best <span>event organizers</span></h3>
+        <a href="#" class="btn">contact us</a>
     </div>
-  </div>
+
+    <div class="swiper home-slider">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide"><img src="slide-1.jpg" alt=""></div>
+        <div class="swiper-slide"><img src="slide-2.jpg" alt=""></div>
+        <div class="swiper-slide"><img src="slide-3.jpg" alt=""></div>
+        <div class="swiper-slide"><img src="slide-4.jpg" alt=""></div>
+        <div class="swiper-slide"><img src="slide-5.jpg" alt=""></div>
+        <div class="swiper-slide"><img src="slide-6.jpg" alt=""></div>
+    </div>
+</div>
+</section>
+
+<section class="service" id="service">
+    <h1 class="heading">our <span>services</span></h1>
+
+    <div class="box-container">
+        <div class="box">
+            <i class="fas fa-map-marker-alt"></i>
+            <h3>venue selection</h3>
+            <p>lorem ipsum dolor sit,amet consectetur adipisicing elit. porro, suscipit.</p>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-envelope"></i>
+            <h3>invitation card</h3>
+            <p>lorem ipsum dolor sit,amet consectetur adipisicing elit. porro, suscipit.</p>
+        </div>
+        
+        <div class="box">
+            <i class="fas fa-music"></i>
+            <h3>entertainment</h3>
+            <p>lorem ipsum dolor sit,amet consectetur adipisicing elit. porro, suscipit.</p>
+        </div>
+
+       <div class="box">
+            <i class="fas fa-utensils"></i>
+            <h3>food and drinks</h3>
+            <p>lorem ipsum dolor sit,amet consectetur adipisicing elit. porro, suscipit.</p>
+        </div>
+
+       <div class="box">
+            <i class="fas fa-photo-video"></i>
+            <h3>photos and videos</h3>
+            <p>lorem ipsum dolor sit,amet consectetur adipisicing elit. porro, suscipit.</p>
+        </div>
+
+       <div class="box">
+            <i class="fas fa-birthday-cake"></i>
+            <h3>custom food</h3>
+            <p>lorem ipsum dolor sit,amet consectetur adipisicing elit. porro, suscipit.</p>
+        </div>
+    </div>
+</section>
+
+<section class="about" id="about">
+    <h1 class="heading"><span>about</span> us</h1>
+
+    <div class="row">
+        <div class="image">
+            <img src="about-img.jpg" alt="">
+        </div>
+
+        <div class="content">
+            <h3>we will give a very special celebration for you</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam labore fugiat ut esse perferendis perspiciatis provident dolores fuga in facilis culpa possimus, quia praesentium itaque, sapiente quasi harum rem asperiores.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.fugiat vero expedita incidunt provident quibusdam aut odit,numquam nesciunt similique nisi.</p>
+            <a href="#" class="btn">contact us</a>
+        </div>
+    </div>
+</section>
+<section class="gallery" id="gallery">
+    <h1 class="heading">our <span>gallery</span></h1>
+
+    <!-- FILTER BUTTONS -->
+    <div class="gallery-filters">
+        <button data-filter="all" class="active">All</button>
+        <button data-filter="wedding">Wedding</button>
+        <button data-filter="birthday">Birthday</button>
+        <button data-filter="corporate">Corporate</button>
+    </div>
+
+    <div class="box-container">
+        <div class="box wedding birthday">
+            <img src="g-1.jpg" alt="">
+            <h3 class="title">photos and events</h3>
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-share"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+        </div>
+
+        <div class="box wedding">
+            <img src="g-2.jpg" alt="">
+            <h3 class="title">photos and events</h3>
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-share"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+        </div>
+
+        <div class="box corporate">
+            <img src="g-3.jpg" alt="">
+            <h3 class="title">photos and events</h3>
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-share"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+        </div>
+
+        <div class="box birthday">
+            <img src="g-4.jpg" alt="">
+            <h3 class="title">photos and events</h3>
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-share"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+        </div>
+
+        <div class="box wedding">
+            <img src="g-5.jpg" alt="">
+            <h3 class="title">photos and events</h3>
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-share"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+        </div>
+
+        <div class="box corporate">
+            <img src="g-6.jpg" alt="">
+            <h3 class="title">photos and events</h3>
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-share"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+        </div>
+
+        <div class="box corporate">
+            <img src="g-7.jpg" alt="">
+            <h3 class="title">photos and events</h3>
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-share"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+        </div>
+
+        <div class="box birthday">
+            <img src="g-8.jpg" alt="">
+            <h3 class="title">photos and events</h3>
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-share"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+        </div>
+
+        <div class="box corporate">
+            <img src="g-9.jpg" alt="">
+            <h3 class="title">photos and events</h3>
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-share"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="price" id="price">
+    <h1 class="heading">our <span>price</span></h1>
+
+    <div class="box-container">
+        <div class="box">
+            <h3 class="title">for birthdays</h3>
+            <h3 class="amount">$250.99</h3>
+            <ul>
+    <li><i class="fas fa-check"></i>full services</li>
+    <li><i class="fas fa-check"></i>decorations</li>
+    <li><i class="fas fa-check"></i>music and photos</li>
+    <li><i class="fas fa-check"></i>food and drinks</li>
+    <li><i class="fas fa-check"></i>invitation card</li>
+           </ul>
+      <a href="#" class="btn">check out</a>
+        </div>
+
+     <div class="box">
+            <h3 class="title">for weddings</h3>
+            <h3 class="amount">$450.99</h3>
+            <ul>
+    <li><i class="fas fa-check"></i>full services</li>
+    <li><i class="fas fa-check"></i>decorations</li>
+    <li><i class="fas fa-check"></i>music and photos</li>
+    <li><i class="fas fa-check"></i>food and drinks</li>
+    <li><i class="fas fa-check"></i>invitation card</li>
+           </ul>
+      <a href="#" class="btn">check out</a>
+        </div>
+
+      <div class="box">
+            <h3 class="title">for concerts </h3>
+            <h3 class="amount">$650.99</h3>
+            <ul>
+    <li><i class="fas fa-check"></i>full services</li>
+    <li><i class="fas fa-check"></i>decorations</li>
+    <li><i class="fas fa-check"></i>music and photos</li>
+    <li><i class="fas fa-check"></i>food and drinks</li>
+    <li><i class="fas fa-check"></i>invitation card</li>
+           </ul>
+      <a href="#" class="btn">check out</a>
+        </div>
+  
+      <div class="box">
+            <h3 class="title">for others</h3>
+            <h3 class="amount">$750.99</h3>
+            <ul>
+    <li><i class="fas fa-check"></i>full services</li>
+    <li><i class="fas fa-check"></i>decorations</li>
+    <li><i class="fas fa-check"></i>music and photos</li>
+    <li><i class="fas fa-check"></i>food and drinks</li>
+    <li><i class="fas fa-check"></i>invitation card</li>
+           </ul>
+      <a href="#" class="btn">check out</a>
+        </div>
+
+    </div>
+</section>
+
+<!-- FOOD MENU -->
+<section class="food" id="food">
+    <h1 class="heading">our <span>food menu</span></h1>
+    <div class="box-container">
+        <div class="box">
+            <h3>Starters</h3>
+            <ul>
+                <li>Veg Spring Rolls</li>
+                <li>Chicken Tikka</li>
+                <li>Paneer Chilli</li>
+                <li>French Fries</li>
+            </ul>
+        </div>
+        <div class="box">
+            <h3>Main Course</h3>
+            <ul>
+                <li>Butter Chicken</li>
+                <li>Paneer Butter Masala</li>
+                <li>Veg Biryani</li>
+                <li>Dal Tadka</li>
+            </ul>
+        </div>
+        <div class="box">
+            <h3>Desserts</h3>
+            <ul>
+                <li>Gulab Jamun</li>
+                <li>Chocolate Brownie</li>
+                <li>Ice Cream</li>
+                <li>Fruit Salad</li>
+            </ul>
+        </div>
+        <div class="box">
+            <h3>Beverages</h3>
+            <ul>
+                <li>Fresh Lime Soda</li>
+                <li>Mojito</li>
+                <li>Soft Drinks</li>
+                <li>Tea / Coffee</li>
+            </ul>
+        </div>
+    </div>
+</section>
+
+
+<section class="reivew" id="review">
+    <h1 class="heading">client's <span>review</span></h1>
+
+    <div class="review-slider swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide box">
+                   <i class="fas fa-quote-right"></i>
+                        <div class="user">
+                             <img src="pic-1.png" alt="">
+                             <div class="user-info">
+                                     <h3>john deo</h3>
+                                     <span>happy clients</span>
+                    </div>
+                  </div>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. corporis dolor dicta cum.eos beatae eligendi,magni numquam nemo sed ut corrupti,ipsam iure nisi unde et assumenda perspiciatis voluptatibus nihil.</P>
+            </div>
+
+
+          <div class="swiper-slide box">
+                   <i class="fas fa-quote-right"></i>
+                        <div class="user">
+                             <img src="pic-2.png" alt="">
+                             <div class="user-info">
+                                     <h3>john deo</h3>
+                                     <span>happy clients</span>
+                    </div>
+                  </div>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. corporis dolor dicta cum.eos beatae eligendi,magni numquam nemo sed ut corrupti,ipsam iure nisi unde et assumenda perspiciatis voluptatibus nihil.</P>
+            </div>
+
+            <div class="swiper-slide box">
+                   <i class="fas fa-quote-right"></i>
+                        <div class="user">
+                             <img src="pic-3.png" alt="">
+                             <div class="user-info">
+                                     <h3>john deo</h3>
+                                     <span>happy clients</span>
+                    </div>
+                  </div>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. corporis dolor dicta cum.eos beatae eligendi,magni numquam nemo sed ut corrupti,ipsam iure nisi unde et assumenda perspiciatis voluptatibus nihil.</P>
+            </div>
+
+            <div class="swiper-slide box">
+                   <i class="fas fa-quote-right"></i>
+                        <div class="user">
+                             <img src="pic-4.png" alt="">
+                             <div class="user-info">
+                                     <h3>john deo</h3>
+                                     <span>happy clients</span>
+                    </div>
+                  </div>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. corporis dolor dicta cum.eos beatae eligendi,magni numquam nemo sed ut corrupti,ipsam iure nisi unde et assumenda perspiciatis voluptatibus nihil.</P>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<section class="contact" id="contact">
+    <h1 class="heading"><span>contact</span> us</h1>
+
+    <form action="">
+    <div class="inputBox">
+        <input type="text" placeholder="Name" required>
+        <input type="email" placeholder="Email" required>
+    </div>
+    <div class="inputBox">
+        <input type="number" placeholder="Number" required>
+        <input type="text" placeholder="Subject">
+    </div>
+    <textarea placeholder="Your Message" cols="30" rows="10"></textarea>
+
+    <!-- Special Food Request -->
+    <textarea placeholder="Special Food Request (If Any)" cols="30" rows="3"></textarea>
+
+    <input type="submit" value="Send Message" class="btn">
+</form>
+
+</section>
+
+<section class="footer">
+         <div class="box-container">
+
+    <div class="box">
+        <h3>branches</h3>
+        <a href="#"> <i class="fas fa-map-marker-alt"></i> mumbai </a>
+        <a href="#"> <i class="fas fa-map-marker-alt"></i> jogeshwari </a>
+        <a href="#"> <i class="fas fa-map-marker-alt"></i> goregaon </a>
+        <a href="#"> <i class="fas fa-map-marker-alt"></i> navi mumbai </a>
+        <a href="#"> <i class="fas fa-map-marker-alt"></i> andheri </a>
+    </div>
+
+    <div class="box">
+    <h3>quick links</h3>
+    <a href="#"> <i class="fas fa-arrow-right"></i> home </a>
+    <a href="#"> <i class="fas fa-arrow-right"></i> service </a>
+    <a href="#"> <i class="fas fa-arrow-right"></i> about </a>
+    <a href="#"> <i class="fas fa-arrow-right"></i> gallery </a>
+    <a href="#"> <i class="fas fa-arrow-right"></i> price </a>
+    <a href="#"> <i class="fas fa-arrow-right"></i> reivew </a>
+    <a href="#"> <i class="fas fa-arrow-right"></i> contact </a>
 </div>
 
-<script src="script1.js"></script>
+    <div class="box">
+    <h3>contact info</h3>
+    <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
+<a href="#"> <i class="fas fa-phone"></i> +111-222-3333 </a>
+<a href="#"> <i class="fas fa-envelope"></i> preethamchittathuru@gmail.com </a>
+<a href="#"> <i class="fas fa-envelope"></i> anasshaikh@gmail.com </a>
+<a href="#"> <i class="fas fa-map-marker-alt"></i> mumbai, india - 400104 </a>
+
+</div>
+
+    <div class="box">
+    <h3>follow us</h3>
+    <a href="#"> <i class="fab fa-facebook-f"></i> facebook </a>
+    <a href="#"> <i class="fab fa-twitter"></i> twitter </a>
+    <a href="#"> <i class="fab fa-instagram"></i> instagram </a>
+    <a href="#"> <i class="fab fa-linkedin"></i> linkedin </a>
+</div>
+
+</div>
+
+<div class="credit"> Created By <span>Mr. PREETHAM </span> | All Rights Reserved </div>
+</section>
+
+<div class="theme-toggler">
+
+    <div class="toggle-btn">
+        <i class="fas fa-cog"></i>
+    </div>
+
+    <h3>choose color</h3>
+
+    <div class="buttons">
+        <div class="theme-btn" style="background-color: #3867d6;"></div>
+        <div class="theme-btn" style="background-color: #f7b731;"></div>
+        <div class="theme-btn" style="background-color: #ff0033;"></div>
+        <div class="theme-btn" style="background-color: #20bf6b;"></div>
+        <div class="theme-btn" style="background-color: #fa8231;"></div>
+        <div class="theme-btn" style="background-color: #FC427B;"></div>
+    </div>
+
+</div>   
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script src="script.js"></script>
+
+</body>
+</html>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0; URL='index1.html'" />
+  <title>Redirecting...</title>
+</head>
+<body>
+  <p>If you are not redirected automatically, <a href="index1.html">click here</a>.</p>
 </body>
 </html>
